# gnclib

./: .gitignore  CMakeLists.txt  Makefile  README.md  orbit.py
include/gnclib/: EOM.hpp  Helpers.hpp  Physics.hpp  PhysicsTwoBody.hpp  PhysicsTwoBodyDrag.hpp  Solver.hpp
notebooks/: orbit.ipynb  orbit_twobody.ipynb
src/main/gnclib/: CMakeLists.txt  Core  EOM.cpp  Helpers.cpp  OrbitSim.cpp  Physics.cpp  PhysicsTwoBody.cpp  PhysicsTwoBodyDrag.cpp  Solver.cpp
src/main/pygnc/: Bindings.cpp  CMakeLists.txt
src/test/gnclib/: CMakeLists.txt  GncLibTests-main.cpp  gnclib_test.cpp
